# umbraperf

./: .gitignore  2693.js.LICENSE.txt  3539.js  5608.js.LICENSE.txt  7296.js.LICENSE.txt  Cargo.toml  README.md  app.js  css.worker.js  html.worker.js  index.html  json.worker.js  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.debug.js
.github/workflows/: main.yml  rust.yml
crate/: Cargo.toml
crate/parquet/: Cargo.toml
crate/parquet/src/util/test_common/: file_util.rs
crate/src/: analyze.rs  analyze_api.rs  bindings.rs  console_js_log.rs  controller.rs  csv_reader.rs  function_api.rs  lib.rs  record_batch_util.rs  rest_api.rs  state.rs  streambuf.rs
crate/src/exec/: abs_freq.rs  analyze.rs  count.rs  rel_freq.rs  rest_api.rs
crate/src/exec/basic/: analyze.rs  basic.rs  count.rs  filter.rs  kpis.rs  op_mapping.rs  statistics.rs  uir.rs
crate/src/exec/freq/: abs_freq.rs  freq.rs  rel_freq.rs
crate/src/exec/rest/: rest_api.rs  rest_api_pars.rs
crate/src/state/: state.rs
crate/src/utils/: array_util.rs  bindings.rs  print_to_cons.rs  record_batch_schema.rs  record_batch_util.rs  string_util.rs
crate/src/web_file/: json_file.rs  parquet_reader.rs  serde_reader.rs  streambuf.rs  uir_reader.rs  web_file_chunkreader.rs  whole_file.rs
src/: app.tsx  app_config.tsx  app_context.tsx  drawer.tsx  dummy.module.css  dummy.tsx  file-loader.d.ts  globals.css  history.ts  index.tsx  oldworker.ts  worker.ts  worker_api.ts
src/componentes/: drawer.tsx  dummy.tsx  parquet_analyzer.tsx
src/components/: dashboard.tsx  dashboard_mltiple_events.tsx  drawer.tsx  dummy-dashboard.tsx  dummy.tsx  events_dropdown.tsx  file_uploader.tsx  interpolation_dropdown.tsx  parquet.tsx  tab_panel.tsx  testdummy.tsx  visualization_container.tsx
src/components/charts/: bar_chart.tsx  bar_chart_activity_histogram.tsx  chart_wrapper.tsx  donut_chart.tsx  memory_access_heatmap_chart.tsx  sunburst_chart.tsx  sunburst_chart_dep.tsx  swim_lanes.tsx  swim_lanes_combined_multiple_pipelines.tsx  swim_lanes_multiple_pipelines.tsx  swim_lanes_pipelines.tsx
src/components/dashboards/: dashboard.tsx  dashboard_header.tsx  dashboard_memory_access.tsx  (+7 more)
src/controller/: chart_interaction_controller.ts  event_change_controller.ts  file_upload_controller.ts  index.ts  profile_change_controller.ts  request_controller.ts  response_controller.tsx  web_file_controller.ts
src/model/: backend_queries.ts  backend_results.ts  chart_configuration.ts  chart_data_result.ts  chart_data_results.ts  chart_types.ts  core_result.ts  index.ts  profiles.ts  rest_queries.ts  sql_queries.ts  state.ts  state_mutation.ts  store_dev.ts  vega_configuration.ts  web_file.ts  worker_request.ts
src/style/: charts.module.css  dashboard.module.css  dropdown.module.css  dummy-dashboard.module.css  dummy.module.css  dummyReverted.module.css  events-dropdown.module.css  export-variables.module.css  main-app.module.css  mini-spinner.module.css  queryplan.module.css  spinner.module.css  uir-view-monaco-editor.css  uir-viewer.module.css  upload.module.css  utils.module.css
static/: index.html
static/css/: 2143.0ede0711a4b7e358df62.css  2143.260bf62e98c0f9298966.css  2143.46953691f50bf63af43e.css  2143.4f909015c5435b617d6a.css  2143.587540f8c7c87732e833.css  2143.5ffeeb20963becbccce9.css  2143.7a4384195767147496c1.css  2143.87c5c07444f03e1a8f06.css  2143.8a920c92e21a40628904.css  2143.91e8d1f45d366c0bdd49.css  2198.91edaeddc283d39c4032.css  2198.c9cd8fc39c7bad16005c.css  2693.d1b10df1b0e04ebffecb.css  3524.4f90754084957ec600c2.css
static/js/: 1118.90b0d6182a24f7d2ba66.js  1120.55880f47edb57a10626c.js  1122.e3593c864aa76b65c80a.js  1170.968130159d132ca77e8e.js  1258.fd458c112cf772e0feda.js  1282.9b63c0932d759cb38c41.js  13.753b916685ffc4963bae.js  1420.a9d218e8ccc315e3f7ad.js  1438.91c3af0d09a14a1d7444.js  1446.40f8f89cf9e17d4f0a56.js  1476.8918ad0d4ee0f9cb9f6d.js  1478.f98ed48b9a5be232ff05.js  15.582c513fdc7ccff10eac.js  1560.59c272f87485ae6e2be4.js  1642.4ceb2927b60da0e7632a.js  1688.d33e25da794548894584.js  1710.4d86e0af79246bcd5e7a.js  1740.43c72870ad59e79398d3.js  1888.030fd5945820433928dc.js  1914.3c87ff36a69c7644a4ce.js  198.2f33f8f90e201c0ff10f.js  2038.634768c1b6c826964583.js  205.3c5885e08943eec8bad9.js  2077.c80bd6dbd15d72f3d777.js  2094.a08505e1de937339a088.js  2244.f27bc37cf7b27aacf967.js  2278.50a4cb4ce693297ae4b7.js  2302.5c8cb77e22cf64fa1fe8.js  2313.aaac439996c83b80d490.js  2359.8eba02784f40020e21ab.js  2398.14523c5d8691e61f6d33.js  2407.3ac6df89718846df3436.js  2516.e323e96ee29bd76e1dc3.js  2536.4a06c65d5e6f8274e498.js  2567.1fe1b2b56f63b5f10df3.js  2578.be6d2f34defbb17ec3b0.js  2578.f81e9295dd13d73301e3.js  2586.add8ea4aeb447d0b5ffa.js  2658.32597c8bc38cb25eb76a.js  2686.a3c434c2b436ad95a89a.js  (+149 more)
(+59 files in other folders)
