[package]
name = "umbra_profiler"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

workspace = "../"

[target.'cfg(target_arch = "wasm32")'.features]
default = ["ed25519-dalek/nightly", "rand/wasm-bindgen", "js-sys"]

[lib]
crate-type = ["cdylib", "rlib"]



[dependencies.web-sys]
version = "0.3.51"
features = [
  'console',
  'Crypto',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
  'MouseEvent',
  'KeyboardEvent',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'WebSocket',
  'Performance',
  'Worker',
  'EventTarget',
  'EventListener'
  ]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
log = "0.4.14"
chrono = "0.4.19"
js-sys = "0.3.51"
lazy_static = "1.4.0"
encode_unicode = "0.3.6"
unicode-width = "0.1.8"
csv = "1.1.6"
arrow = {version = "5.0", default-features = false, features = ["js","csv", "ipc"] }
futures = {version = "0.3.1", features = ["thread-pool"]}
boolvec = "0.2.6"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
serde = { version = "^1.0.129", features = [ "derive" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
lto = true
opt-level = "s"
