[package]
name = "umbra_profiler"
version = "1.0.0"
authors = ["michael schott"]
edition = "2018"
publish = false
license = "mlp2.0"
description = "umbra_profiler"
repository = "https://github.com/umbraperf/umbraperf"

workspace = "../"

[target.'cfg(target_arch = "wasm32")'.features]
default = ["ed25519-dalek/nightly", "rand/wasm-bindgen", "js-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
incremental = true

[dependencies.web-sys]
version = "0.3.51"
features = [
  'console',
  'Crypto',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
  'MouseEvent',
  'KeyboardEvent',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'WebSocket',
  'Performance',
  'Worker',
  'EventTarget',
  'EventListener'
  ]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
log = "0.4.14"
chrono = "0.4.19"
js-sys = "0.3.51"
lazy_static = "1.4.0"
encode_unicode = "0.3.6"
unicode-width = "0.1.8"
arrow = {version = "5.5", default-features = false, features = ["js","csv", "ipc"] }
futures = {version = "0.3.1", features = ["thread-pool"]}
boolvec = "0.2.6"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
serde = { version = "^1.0.129", features = [ "derive" ] }
serde_json = "1.0.64"
zip = { version = "0.5.13",  default-features = false, features = [ "deflate" ] }
parquet = { path = "parquet", version = "5.5.0", default_features=false, features=["arrow", "snap", "base64"]}
regex = "1.5.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
lto = true
opt-level = "s"
