[package]
name = "umbra_profiler"
version = "1.0.0"
authors = ["michael schott"]
edition = "2018"
publish = false
license = "mlp2.0"
description = "umbra_profiler"
repository = "https://github.com/umbraperf/umbraperf"

workspace = "../"

[target.'cfg(target_arch = "wasm32")'.features]
default = ["ed25519-dalek/nightly", "rand/wasm-bindgen", "js-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
incremental = true

[dependencies.web-sys]
version = "0.3.70"
features = [
  'console',
  'Crypto',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
  'MouseEvent',
  'KeyboardEvent',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'WebSocket',
  'Performance',
  'Worker',
  'EventTarget',
  'EventListener'
  ]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
log = "0.4.22"
chrono = "0.4.38"
js-sys = "0.3.70"
lazy_static = "1.5.0"
encode_unicode = "1.0.0"
unicode-width = "0.2.0"
arrow = {version = "53.0.0", default-features = false, features = ["csv", "ipc"] }
futures = {version = "0.3.30", features = ["thread-pool"]}
boolvec = "0.2.6"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
serde = { version = "^1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
zip = { version = "2.2.0",  default-features = false, features = [ "deflate" ] }
parquet = { version = "53.0.0", default-features = false, features = ["arrow", "snap", "base64"] }
regex = "1.10.6"
rust_decimal = "1.36"
bytes = "1.7.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
opt-level = "s"
